2005-06-13  Sergey Poznyakoff  <gray@Mirddin.farlep.net>

	* m4/rmt.m4 (PU_RMT): Fix building on Cygwin. Proposed by Corinna
	Vinschen <vinschen@redhat.com>.
	* m4/system.m4 (PU_SYSTEM): Add AC_STRUCT_ST_BLKSIZE.
	Require gl_AC_TYPE_UINTMAX_T (this means that uintmax_t.m4 from
	gnulibs should be used).

2005-05-22  Sergey Poznyakoff  <gray@Mirddin.farlep.net>

	* paxlib/paxerror.h: Removed
	* paxlib/names.c: New file
	* paxlib/paxlib.h: New file
	* paxlib/DISTFILES: Add names.c,paxlib.h; remove paxerror.h
	* paxlib/Makefile.am: Likewise
	* paxlib/error.c: Rename paxerror.h to paxlib.h
	* paxlib/exit.c: Likewise.
	
2005-05-19  Sergey Poznyakoff  <gray@Mirddin.farlep.net>

	* paxlib/DISTFILES: New file
	* paxlib/convert.c: New file
	* paxlib/error.c: New file
	* paxlib/exit.c: New file
	* paxlib/paxerror.h: New file
	* paxlib/Makefile.am (libpax_a_SOURCES): Add new files.

	* gnulib.modules: Add getdate. Needed by genfile.
	* m4/rmt.m4 (PU_RMT): Check for LIB_SETSOCKOPT

2005-05-14  Paul Eggert  <eggert@cs.ucla.edu>

	* COPYING, Makefile.am, configure.ac, build-aux/bootstrap,
	lib/Makefile.tmpl, lib/rmt.h, lib/rtapelib.c, lib/system.h,
	paxlib/Makefile.am, paxlib/pax.h, paxlib/paxbuf.c,
	paxlib/paxbuf.h, paxlib/rtape.c, paxlib/tar.h, paxlib/tarbuf.c,
	paxlib/tardef.h, paxtest/Makefile.am, paxtest/paxtest.c,
	paxtest/paxtest.h, rmt/rmt.c, tests/argcv.c, tests/argcv.h,
	tests/genfile.c:
	Update FSF postal mail address.

2005-05-14  Sergey Poznyakoff  <gray@Mirddin.farlep.net>

	* AUTHORS: New file
	* COPYING: New file
	* NEWS: New file
	* THANKS: New file
	* README-alpha: New file
	* README: Updated
	* Makefile.am: New file
	* configure.ac: New file
	* .cvsignore: New file

	* paxlib: New directory
	* paxlib/Makefile.am: New file
	* paxlib/pax.h: Likewise
	* paxlib/paxbuf.c: Likewise
	* paxlib/paxbuf.h: Likewise
	* paxlib/rtape.c: Likewise
	* paxlib/tar.h: Likewise
	* paxlib/tarbuf.c: Likewise
	* paxlib/tardef.h: Likewise
	* paxlib/.cvsignore: New file
